objects/E2E_Acc_Group_Setup_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Parent accounts are allowed</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>E2E Acc Group Setup Request</relationshipLabel>
        <relationshipName>E2E_Acc_Group_Setup_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advanced Support Group</label>
        <referenceTo>Advanced_Support_Groups__c</referenceTo>
        <relationshipLabel>E2E Acc Group Setup Request</relationshipLabel>
        <relationshipName>E2E_Acc_Group_Setup_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSC Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E2E_Acc_Group_Setup_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>Name of the group to be created</description>
        <label>Group Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Comments__c</fullName>
        <label>Request Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E2E_Acc_Group_Setup_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Center__c</fullName>
        <label>Support Center</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request:</label>
        <picklist>
            <picklistValues>
                <fullName>New E2E Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify E2E Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove E2E Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>E2E Acc Group Setup Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Advanced_Support_Group__c</columns>
        <columns>CSC_Name__c</columns>
        <columns>Date_Needed__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Request_Comments__c</columns>
        <columns>Requestor_User_ID__c</columns>
        <columns>Support_Center__c</columns>
        <columns>Type_of_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>E2E Acc  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2E Acc Group Setup Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>